added json blob

--- a/index.html
+++ b/index.html
@@ -28,6 +28,26 @@ body {
 <body>
 <script src="http://d3js.org/d3.v3.js"></script>
 <script>
+var json = [
+  {
+    "date": "20111001",
+    "New York": "63.4",
+    "San Francisco": "62.7",
+    "Austin": "72.2"
+  },
+  {
+    "date": "20111002",
+    "New York": "58.0",
+    "San Francisco": "59.9",
+    "Austin": "67.7"
+  },
+  {
+    "date": "20111003",
+    "New York": "53.3",
+    "San Francisco": "59.1",
+    "Austin": "69.4"
+  }
+];
 
 var margin = {top: 20, right: 80, bottom: 30, left: 50},
     width = 960 - margin.left - margin.right,
