--- a/index.html
+++ b/index.html
@@ -30,28 +30,123 @@ body {
 <script>
 var json = [
   {
-    "date": "20111001",
-    "New York": "63.4",
-    "San Francisco": "62.7",
-    "Austin": "72.2"
+    "the_course_as_a_whole": 4.17,
+    "time": 131,
+    "professor": "Allison Obourn",
+    "course_whole_code": "Hiiiiii",
   },
   {
-    "date": "20111002",
-    "New York": "58.0",
-    "San Francisco": "59.9",
-    "Austin": "67.7"
+    "the_course_as_a_whole": 4.71,
+    "time": 131,
+    "professor": "Stuart Reges",
+    "course_whole_code": "Hiiiiii",
   },
   {
-    "date": "20111003",
-    "New York": "53.3",
-    "San Francisco": "59.1",
-    "Austin": "69.4"
+    "the_course_as_a_whole": 4.3,
+    "time": 131,
+    "professor": "Ilene Shen",
+    "course_whole_code": "Hiiiiii",
+  },
+  {
+    "the_course_as_a_whole": 3,
+    "time": 132,
+    "professor": "Allison Obourn",
+    "course_whole_code": "Hiiiiii",
+  },
+  {
+    "the_course_as_a_whole": 3.8,
+    "time": 132,
+    "professor": "Stuart Reges",
+    "course_whole_code": "Hiiiiii",
+  },
+  {
+    "the_course_as_a_whole": 4.9,
+    "time": 132,
+    "professor": "Ilene Shen",
+    "course_whole_code": "Hiiiiii",
+  },
+  {
+    "the_course_as_a_whole": 4.2,
+    "time": 142,
+    "professor": "Allison Obourn",
+    "course_whole_code": "Hiiiiii",
+  },
+  {
+    "the_course_as_a_whole": 4.9,
+    "time": 142,
+    "professor": "Stuart Reges",
+    "course_whole_code": "Hiiiiii",
+  },
+  {
+    "the_course_as_a_whole": 3.2,
+    "time": 142,
+    "professor": "Ilene Shen",
+    "course_whole_code": "Hiiiiii",
   }
 ];
 
-var margin = {top: 20, right: 80, bottom: 30, left: 50},
-    width = 960 - margin.left - margin.right,
-    height = 500 - margin.top - margin.bottom;
+var data = [
+    {
+        "City": "New York",
+        "Data": [
+            {
+                "Date": "20111001",
+                "Value": "63.4"
+            },
+            {
+                "Date": "20111002",
+                "Value": "58.0"
+            },
+            {
+                "Date": "20111003",
+                "Value": "53.3"
+            }
+        ]
+    },
+    {
+        "City": "San Francisco",
+        "Data": [
+            {
+                "Date": "20111001",
+                "Value": "62.7"
+            },
+            {
+                "Date": "20111002",
+                "Value": "59.9"
+            },
+            {
+                "Date": "20111003",
+                "Value": "59.1"
+            }
+        ]
+    },
+    {
+        "City": "Austin",
+        "Data": [
+            {
+                "Date": "20111001",
+                "Value": "72.2"
+            },
+            {
+                "Date": "20111002",
+                "Value": "67.7"
+            },
+            {
+                "Date": "20111003",
+                "Value": "69.4"
+            }
+        ]
+    }
+];
+
+var margin = {
+    top: 20,
+    right: 80,
+    bottom: 30,
+    left: 50
+},
+width = 560 - margin.left - margin.right,
+    height = 300 - margin.top - margin.bottom;
 
 var parseDate = d3.time.format("%Y%m%d").parse;
 
@@ -73,69 +168,82 @@ var yAxis = d3.svg.axis()
 
 var line = d3.svg.line()
     .interpolate("basis")
-    .x(function(d) { return x(d.date); })
-    .y(function(d) { return y(d.temperature); });
+    .x(function (d) {
+    return x(d.Date);
+})
+    .y(function (d) {
+    return y(d.Value);
+});
 
 var svg = d3.select("body").append("svg")
     .attr("width", width + margin.left + margin.right)
     .attr("height", height + margin.top + margin.bottom)
-  .append("g")
+    .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-d3.tsv("data.tsv", function(error, data) {
-  color.domain(d3.keys(data[0]).filter(function(key) { return key !== "date"; }));
+color.domain(data.map(function (d) { return d.City; }));
 
-  data.forEach(function(d) {
-    d.date = parseDate(d.date);
-  });
-
-  var cities = color.domain().map(function(name) {
-    return {
-      name: name,
-      values: data.map(function(d) {
-        return {date: d.date, temperature: +d[name]};
-      })
-    };
-  });
-
-  x.domain(d3.extent(data, function(d) { return d.date; }));
-
-  y.domain([
-    d3.min(cities, function(c) { return d3.min(c.values, function(v) { return v.temperature; }); }),
-    d3.max(cities, function(c) { return d3.max(c.values, function(v) { return v.temperature; }); })
-  ]);
-
-  svg.append("g")
-      .attr("class", "x axis")
-      .attr("transform", "translate(0," + height + ")")
-      .call(xAxis);
-
-  svg.append("g")
-      .attr("class", "y axis")
-      .call(yAxis)
-    .append("text")
-      .attr("transform", "rotate(-90)")
-      .attr("y", 6)
-      .attr("dy", ".71em")
-      .style("text-anchor", "end")
-      .text("Temperature (ºF)");
-
-  var city = svg.selectAll(".city")
-      .data(cities)
-    .enter().append("g")
-      .attr("class", "city");
-
-  city.append("path")
-      .attr("class", "line")
-      .attr("d", function(d) { return line(d.values); })
-      .style("stroke", function(d) { return color(d.name); });
-
-  city.append("text")
-      .datum(function(d) { return {name: d.name, value: d.values[d.values.length - 1]}; })
-      .attr("transform", function(d) { return "translate(" + x(d.value.date) + "," + y(d.value.temperature) + ")"; })
-      .attr("x", 3)
-      .attr("dy", ".35em")
-      .text(function(d) { return d.name; });
+data.forEach(function (kv) {
+    kv.Data.forEach(function (d) {
+        d.Date = parseDate(d.Date);
+    });
 });
+
+var cities = data;
+
+var minX = d3.min(data, function (kv) { return d3.min(kv.Data, function (d) { return d.Date; }) });
+var maxX = d3.max(data, function (kv) { return d3.max(kv.Data, function (d) { return d.Date; }) });
+var minY = d3.min(data, function (kv) { return d3.min(kv.Data, function (d) { return d.Value; }) });
+var maxY = d3.max(data, function (kv) { return d3.max(kv.Data, function (d) { return d.Value; }) });
+
+x.domain([minX, maxX]);
+y.domain([minY, maxY]);
+
+svg.append("g")
+    .attr("class", "x axis")
+    .attr("transform", "translate(0," + height + ")")
+    .call(xAxis);
+
+svg.append("g")
+    .attr("class", "y axis")
+    .call(yAxis)
+    .append("text")
+    .attr("transform", "rotate(-90)")
+    .attr("y", 6)
+    .attr("dy", ".71em")
+    .style("text-anchor", "end")
+    .text("Temperature (ºF)");
+
+var city = svg.selectAll(".city")
+    .data(cities)
+    .enter().append("g")
+    .attr("class", "city");
+
+city.append("path")
+    .attr("class", "line")
+    .attr("d", function (d) {
+    return line(d.Data);
+})
+    .style("stroke", function (d) {
+    return color(d.City);
+});
+
+city.append("text")
+    .datum(function (d) {
+    return {
+        name: d.City,
+        date: d.Data[d.Data.length - 1].Date,
+        value: d.Data[d.Data.length - 1].Value
+    };
+})
+    .attr("transform", function (d) {
+    return "translate(" + x(d.date) + "," + y(d.value) + ")";
+})
+    .attr("x", 3)
+    .attr("dy", ".35em")
+    .text(function (d) {
+        return d.name;
+});
+
 
 </script>
