changed json array

--- a/index.html
+++ b/index.html
@@ -85,6 +85,54 @@ var json = [
   }
 ];
 
+var data1 = [
+    {
+        "City": "New York",
+        "Date": "20111001",
+        "Value": "63.4",
+    },
+    {
+        "City": "New York",
+        "Date": "20111002",
+        "Value": "58.0",
+    },
+    {
+        "City": "New York",
+        "Date": "20111003",
+        "Value": "53.3",
+    },
+    {
+        "City": "San Francisco",
+        "Date": "20111001",
+        "Value": "62.7",
+    },
+    {
+        "City": "San Francisco",
+        "Date": "20111002",
+        "Value": "59.9",
+    },
+    {
+        "City": "San Francisco",
+        "Date": "20111003",
+        "Value": "59.1",
+    },
+    {
+        "City": "Austin",
+        "Date": "20111001",
+        "Value": "72.2",
+    },
+    {
+        "City": "Austin",
+        "Date": "20111002",
+        "Value": "67.7",
+    },
+    {
+        "City": "Austin",
+        "Date": "20111003",
+        "Value": "69.4",
+    },
+];
+
 var data = [
     {
         "City": "New York",
