--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@ var data = d3.nest()
         return d.professor;
     })
     .entries(data1);
+    /*.entries(function(d) {
+        return data1;
+    });*/
 
 /*var data = [
     {
@@ -170,7 +173,7 @@ width = 560 - margin.left - margin.right,
 var parseDate = d3.time.format("%Y%m%d").parse;
 
 var x = d3.time.scale()
-    .range([0, width]);
+        .range([0, width]);
 
 var y = d3.scale.linear()
     .range([height, 0]);
@@ -185,10 +188,15 @@ var yAxis = d3.svg.axis()
     .scale(y)
     .orient("left");
 
+var incrementedTime = function(time) {
+    var newTime = time - minX;
+    return newTime - (Math.floor(newTime / 10) * 6);
+}
+
 var line = d3.svg.line()
     .interpolate("basis")
     .x(function (d) {
-        return x(d.time);
+        return x(incrementedTime(d.time));
     })
     .y(function (d) {
     return y(d.the_course_as_a_whole);
