--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@ var svg = d3.select("body").append("svg")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
 // TODO: USES OUTSIDE CODE ------------- DON"T FORGET TO SITE
+// Used for hovering to get rating of professor
 var tip = d3.tip() 
     .attr('class', 'd3-tip')
     .offset([-10, 0])
@@ -244,8 +245,9 @@ var maxX = d3.max(data, function (kv) { return d3.max(kv.values, function (d) { 
 var minY = d3.min(data, function (kv) { return d3.min(kv.values, function (d) { return d.the_course_as_a_whole; }) });
 var maxY = d3.max(data, function (kv) { return d3.max(kv.values, function (d) { return d.the_course_as_a_whole; }) });
 
+// Set axis ranges
 x.domain([minX, maxX]);
-y.domain([0, maxY]);
+y.domain([0, 5]);
 
 function getPrettyTime(time) {
     var quarterNum = time.substr(time.length - 1);
@@ -265,6 +267,10 @@ function getPrettyTime(time) {
 timeValues = d3.set(timeValues).values(); 
 xAxis.tickValues(timeValues);
 xAxis.tickFormat(function(d) { return getPrettyTime(d); })
+
+// Set y-axis tick marks
+yAxis.tickValues([0, 1, 2, 3, 4, 5]);
+yAxis.tickFormat(d3.format(".0f"));
 
 svg.append("g")
     .attr("class", "x axis")
@@ -296,6 +302,8 @@ professor.append("path")
     return color(d.key);
 });
 
+// Draws circle points on lines
+// Includes hovering
 svg.selectAll('g.dot')
     .data(data)
     .enter().append("g")
@@ -323,6 +331,7 @@ svg.selectAll('g.dot')
     .on('mouseover', tip.show)
     .on('mouseout', tip.hide);
 
+// Sets color of circles to match line
 svg.selectAll('circle')
 .style("stroke", function (d) {
     return color(d.professor);
