--- a/chart.html
+++ b/chart.html
@@ -1,3 +1,4 @@
+<!-- Code borrowed from http://bl.ocks.org/mbostock/3887051 with gratitude.-->
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
@@ -8,7 +9,6 @@ body {
 
 .axis path,
 .axis line {
-  fill: none;
   stroke: #000;
   shape-rendering: crispEdges;
 }
@@ -25,7 +25,6 @@ body {
 <body>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
-
 var margin = {top: 20, right: 20, bottom: 30, left: 40},
     width = 960 - margin.left - margin.right,
     height = 500 - margin.top - margin.bottom;
@@ -38,8 +37,8 @@ var x1 = d3.scale.ordinal();
 var y = d3.scale.linear()
     .range([height, 0]);
 
-var color = d3.scale.ordinal()
-    .range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
+var color = d3.scale.category10();//d3.scale.ordinal()
+    //.range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
 
 var xAxis = d3.svg.axis()
     .scale(x0)
